fix: minor page alignments and remove scroll bar for songlist and home page

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -121,3 +121,12 @@ body {
   border: none;
   transition: all 0.2s ease;
 }
+
+.scrollbar-none {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-none::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
